linuxmuster-linbo (2.3.0-34) babo-testing; urgency=low

  * Merge pull request #59 from Kistelini/feature/grub2:
    Fix encoding of linbo_cmd.sh (broken umlauts etc.),
    http://bit.ly/1ZK4Uhz

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 12 May 2016 21:19:29 +0200

linuxmuster-linbo (2.3.0-33) babo-testing; urgency=low

  * postinst: wallpaper fix, do not overwrite custom boot wallpaper.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 12 May 2016 10:13:44 +0200

linuxmuster-linbo (2.3.0-32) babo-testing; urgency=low

  * Merge pull request #58 from linuxmuster/fix-495
    https://github.com/linuxmuster/linuxmuster-linbo/pull/58
  * Merge pull request #57 from linuxmuster/fix/mmc-efiboot
    https://github.com/linuxmuster/linuxmuster-linbo/pull/57
  * Merge pull request #56 from linuxmuster/feature/battery
    https://github.com/linuxmuster/linuxmuster-linbo/pull/56
  * ntfs-3g updatet to 2016.2.22.
  * On PXE boot try to load group specific grub config first from server.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 10 May 2016 22:28:35 +0200

linuxmuster-linbo (2.3.0-31) babo-testing; urgency=low

  * linbo_cmd.sh, mk_efiboot(): provide grubx64.efi also for linux clients.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 11 Apr 2016 20:06:52 +0200

linuxmuster-linbo (2.3.0-30) babo-testing; urgency=low

  * linbo_cmd.sh:
    - prepare_fs(): removed preceding / in some RSYNC_EXCLUDE entries.
    - partition(): removes linbo/grub update flags in /tmp after partitioning.
    - prepare_grub(): be more verbose.
  * grub pxe template: fixed loading of server side configs.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 24 Mar 2016 16:40:12 +0100

linuxmuster-linbo (2.3.0-29) babo-testing; urgency=low

  * init.sh: cachedev fix.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 19 Mar 2016 11:39:03 +0100

linuxmuster-linbo (2.3.0-28) babo-testing; urgency=low

  * Merged pull request #49 from fschuette: